--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body> <!--a tag h1 faz titulos-->
 
 <div id="top-menu">     
-    <a href="https://www.escoladnc.com.br/"><img src="./images/logo.svg" id="logo" alt="ERROR"> </a>
+    <a href="https://www.escoladnc.com.br/"><img src="/images/logo.svg" id="logo" alt="ERROR"> </a>
     <!-- o id= "logo" pode ser colocado em qualquer parte dentro do img-->
     <!-- o comando "a" serve para fazer um hiperlink, dessa forma quando clico no logo eu sou direcionado
          a página da dnc-->
