--- a/index.html
+++ b/index.html
@@ -37,11 +37,18 @@
 </div>
 <div id="informational-menu">
 <!--após fazer uma divisão com o menu informacional eu adicionei algumas imagens-->
-<p class="texto-informativo"> <img src="/icons/certificadodeconclusao.svg" class="icones" id="certificado" alt="ERROR">  Certificado de conclusão</p>  <!--estou
-     criando uma classe chamada icones, dessa forma consigo modificar vários elementos com um unico comando 
-     no meu style css utilizando ".icones{}s" não foi utilizado, pois preferi ser mais preciso nos espaços-->
-<p class="texto-informativo"> <img src="/icons/relogio-horasdeconclusao.svg" class="icones" id="relogio" alt="ERROR"> 4 horas de conteúdo</p>
-<p class="texto-informativo"> <img src="/icons/aulasonlinegravadas.svg" class="icones" id="gravador" alt="error"> Aulas online gravadas</p>
+    <div class="container_icons_text">
+        <img src="/icons/certificadodeconclusao.svg" class="icones" id="certificado" alt="ERROR">
+        <p class="texto-informativo"> Certificado de conclusão</p>
+    </div>
+    <div class="container_icons_text">
+        <img src="/icons/relogio-horasdeconclusao.svg" class="icones" id="relogio" alt="ERROR">
+        <p class="texto-informativo">4 horas de conteúdo</p>
+    </div>
+    <div class="container_icons_text">
+        <img src="/icons/aulasonlinegravadas.svg" class="icones" id="gravador" alt="ERROR">
+        <p class="texto-informativo">Aulas online gravadas</p>
+    </div>
 <!--criei a classe texto informativo para mexer com esses textos do menu informacional-->
 </div>
 <div id="video-section">
