--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 <div id="informational-menu">
 <!--após fazer uma divisão com o menu informacional eu adicionei algumas imagens-->
     <div class="container_icons_text">
-        <img src="/icons/certificadodeconclusao.svg" class="icones" id="certificado" alt="ERROR">
+        <img src="/icons/certificadodeconclusao.svg" class="icones" alt="ERROR">
         <p class="texto-informativo"> Certificado de conclusão</p>
     </div>
     <div class="container_icons_text">
-        <img src="/icons/relogio-horasdeconclusao.svg" class="icones" id="relogio" alt="ERROR">
+        <img src="/icons/relogio-horasdeconclusao.svg" class="icones" alt="ERROR">
         <p class="texto-informativo">4 horas de conteúdo</p>
     </div>
     <div class="container_icons_text">
-        <img src="/icons/aulasonlinegravadas.svg" class="icones" id="gravador" alt="ERROR">
+        <img src="/icons/aulasonlinegravadas.svg" class="icones" alt="ERROR">
         <p class="texto-informativo">Aulas online gravadas</p>
     </div>
 <!--criei a classe texto informativo para mexer com esses textos do menu informacional-->
