--- a/index.html
+++ b/index.html
@@ -101,40 +101,17 @@
     </div>
     <div id="carousel-section">
       <h1 id="carousel-title">Mais de 500 alunos já iniciaram seus estudos</h1>
-      <div id="divcards">
-        <img
-          id="leftarrow"
-          onclick="scrollleft()"
-          class="arrows"
-          src="/icons/leftarrow.svg"
-          alt="ERROR"
-        />
-        <img
-          id="Leonardocard"
-          class="cards"
-          src="/cards/Leonardocard.svg"
-          alt="ERROR"
-        />
-        <img
-          id="Samanthacard"
-          class="cards"
-          src="/cards/Samanthacard.svg"
-          alt="ERROR"
-        />
-        <img
-          id="Brunacard"
-          class="cards"
-          src="/cards/Brunacard.svg"
-          alt="Error"
-        />
-        <img
-          id="rightarrow"
-          onclick="scrollright()"
-          class="arrows"
-          src="/icons/rightarrow.svg"
-          alt="ERROR"
-        />
+
+      <div class="slide-container">
+        <div class="slide-content">
+            <div class="card-wrapper">
+                <div class="card">
+                    <img src="./cards/Brunacard.svg" alt="error">
+                </div>
+            </div>
+        </div>
       </div>
+      
     </div>
     <div id="form-section">
       <h1 id="form-title">
