--- a/index.html
+++ b/index.html
@@ -102,15 +102,17 @@
     <div id="carousel-section">
       <h1 id="carousel-title">Mais de 500 alunos já iniciaram seus estudos</h1>
 
-      <div class="slide-container">
-        <div class="slide-content">
-            <div class="card-wrapper">
-                <div class="card">
-                    <img src="./cards/Brunacard.svg" alt="error">
+        <div class="body1">
+            <div class="slide-container">
+                <div class="slide-content">
+                    <div class="card-wrapper">
+                        <div class="card">
+                            <img src="./cards/Brunacard.svg" alt="error">
+                        </div>
+                    </div>
                 </div>
-            </div>
+              </div>
         </div>
-      </div>
       
     </div>
     <div id="form-section">
