feat mudança radical

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <!-- este link de fontes foi pego do própio google fonts e apenas copiei e colei aqui no head-->
 
     <!--SWIPER CSS-->
-    <link rel="stylesheet" href="./swiper css/swiper-bundle.min.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     
     <title>Escola DNC</title>
   </head>
@@ -107,17 +110,22 @@
       <h1 id="carousel-title">Mais de 500 alunos já iniciaram seus estudos</h1>
 
       <div class="body1">
-        <div class="slide-container swiper">
-          <div class="slide-content">
-            <div class="card-wrapper swiper-wrapper">
-              <div class="card swiper-slide">
-                  <img src="./cards/Brunacard.svg" alt="error">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./cards/Brunacard.svg" alt="error">
               </div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
+              <div class="swiper-slop[ide">
+                <img src="./cards/Leonardocard.svg" alt="error">
+              </div>
+              <div class="swiper-slide">
+                <img src="./cards/Samanthacard.svg" alt="error"> 
+              </div>
           </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-scrollbar"></div>
+          <div class="swiper-pagination"></div>
         </div>
       </div>
       
@@ -145,9 +153,9 @@
       </form>
     </div>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 
     <!--SWIPER JS-->
-    <script src="./swiper js/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   </body>
 </html>
