add mudança local imagens

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide"><img src="./cards/Brunacard.svg" alt="error"></div>
-            <div class="swiper-slide"><img src="./cards/Leonardocard.svg" alt="error"></div>
-            <div class="swiper-slide"><img src="./cards/Samanthacard.svg" alt="error"></div> 
+            <div class="swiper-slide"><img src="Brunacard.svg" alt="error"></div>
+            <div class="swiper-slide"><img src="Leonardocard.svg" alt="error"></div>
+            <div class="swiper-slide"><img src="Samanthacard.svg" alt="error"></div> 
               
           </div>
 
