--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!- comentários serão adicionados utilizando esses simbolos->
-<!- ao digitar html:5 temos esse layout completo e tempos principalmente head e body. No head->
-<!- utilizo alguns metas que não tenho conhecimento ainda e todo meu texto será escrito no body->
-<!- que aparecerá no site->
 <!-- outra forma de fazer comentários é utilizando essa formulação, contudo como não tinha em meu 
     notbook acabei ignorando, contudo é útil, pois posso utilizar em várias linhas e depois basta
     fechar com -->
@@ -18,7 +14,6 @@
     <!--relacionado com meu css-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- este link de fontes foi pego do própio google fonts e apenas copiei e colei aqui no head-->
 
     <!--SWIPER CSS-->
@@ -110,9 +105,17 @@
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide"><img src="Brunacard.svg" alt="error"></div>
-            <div class="swiper-slide"><img src="Leonardocard.svg" alt="error"></div>
-            <div class="swiper-slide"><img src="Samanthacard.svg" alt="error"></div> 
+            <div class="swiper-slide">
+              <img src="Brunacard.svg" alt="error">
+            </div>
+            
+            <div class="swiper-slide">
+              <img src="Leonardocard.svg" alt="error">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="Samanthacard.svg" alt="error">
+            </div> 
               
           </div>
 
