--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!--SWIPER CSS-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -109,8 +106,7 @@
               
           </div>
 
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
 
         </div>
       </div>
@@ -142,6 +138,6 @@
     <script src="./index.js"></script>
 
     <!--SWIPER JS-->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>>
   </body>
 </html>
