--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 
     <!--esse link css é criado para que meu html esteja relacionado com meu css-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <!--SWIPER CSS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -135,9 +135,9 @@
       </form>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 
     <!--SWIPER JS-->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>>
+    <script src="./js/swiper-bundle.min.js"></script>>
   </body>
 </html>
