--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <head>
     <!--no head coloco informações que precisam ser carregadas antes da página carregar, como fontes etc-->
     <meta charset="utf-8" />
-    <title>Swiper demo</title>
+    <title>Landing page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 
     <!--esse link css é criado para que meu html esteja relacionado com meu css-->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!--SWIPER CSS-->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
@@ -93,11 +93,11 @@
           <div class="swiper-wrapper">
 
             <div class="swiper-slide">
-              <img src="Brunacard.svg" alt="error">
+              <img src="./projeto.png" alt="error">
             </div>
             
             <div class="swiper-slide">
-              <img src="Leonardocard.svg" alt="error">
+              <img src="./projeto.png" alt="error">
             </div>
 
             <div class="swiper-slide">
@@ -135,7 +135,7 @@
       </form>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="index.js"></script>
 
     <!--SWIPER JS-->
     <script src="./js/swiper-bundle.min.js"></script>>
