--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="Samanthacard.svg" alt="error">
+              <img src="./projeto.png" alt="error">
             </div> 
               
           </div>
