add some changes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-  <!-- Demo styles -->
+  <!--style -->
   <link rel="stylesheet" href="./index.css">
+  <!-- Remixicons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.css" crossorigin="" />
 </head>
 
 <body>
@@ -85,10 +87,11 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="./cards/Brunacard.svg" alt="error"></div>
         <div class="swiper-slide"><img src="./cards/Leonardocard.svg" alt="error"></div>
-        <div class="swiper-slide"><img src="./cards/Samanthacard.svg" ></div>
+        <div class="swiper-slide"><img src="./cards/Samanthacard.svg" alt="error"></div>
       </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"><i class="ri-arrow-right-s-line"></i></div>
+      <div class="swiper-button-prev"><i class="ri-arrow-left-s-line"></i></div>
+      
     </div>
   </div>
   </div>
